# projet-immobilier-paris

./: .replit  README.md  ml-final.py  pyproject.toml
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-http-equiv-X-UA-Co-1742073163433.txt
static/: cities-clean.csv  finalized_model.sav  new-stations.csv  ratp-geocoordinates.csv  sncf-geocoordinates.csv  style.css  velib-geo.csv
templates/: about.html  arrive.html  base.html  error.html  index.html  trash.html
